JT-8811 fix wrapping issues on iphone5se size

--- a/app/assets/stylesheets/pages/community/_state_page.scss
+++ b/app/assets/stylesheets/pages/community/_state_page.scss
@@ -31,6 +31,13 @@
       @include media-breakpoint-down(md) {
         width: 90%;
       }
+      @include media-breakpoint-down(xs) {
+        width: 100%;
+        .school-count{
+          margin-right: 10px;
+        }
+      }
+      
     }
     @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
       height: 175px;
